[metadata]
name = pyalgo
version = file: Versionfile
author = Kai Jie Chow
author_email = kj1chow@gmail.com
platforms = any
license = Unlicense
classifiers =
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3.7

[options]
python_requires = >=3.7
package_dir=
    =src
packages=find:

[options.packages.find]
where=src

[options.extras_require]
test = pytest
       pytest-cov
       mypy
       pytest-mypy